# Render-Celery

./: Dockerfile  pyproject.toml  start.sh  task.py  tasks.py
