[tool.poetry]
name = "celery-worker"
version = "0.1.0"
description = "Celery worker with Flower monitoring"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "^5.2.7"}
flower

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"